--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "entrega-backend-primera",
   "version": "1.0.0",
   "main": "app.js",
-  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
@@ -15,6 +14,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3",
+    "mongoose-paginate-v2": "^1.9.1",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
